tests/fail/25_print_too_many_args.lang
// ОЖИДАЕТСЯ ОШИБКА: требует ровно 1 аргумент
функция Начало() : целое {
    печать(1, 2);
    вернуть 0;
}
